<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.utab.samplekotlinapp.view.signFragment.SignUpVM" />

        <variable
            name="fragment"
            type="com.utab.samplekotlinapp.view.signFragment.SignUpFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/email"
            android:afterTextChanged="@{viewModel::afterTextChangedEmail}"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/job"
            android:afterTextChanged="@{viewModel::afterTextChangedJob}"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/user_name"
            android:afterTextChanged="@{viewModel::afterTextChangedUserName}"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/password"
            android:afterTextChanged="@{viewModel::afterTextChangedPass}"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up"
            android:textColorHint="#fff"
            android:onClick="@{()->fragment.onSignBtnClickListener()}"
            />

    </LinearLayout>
</layout>