<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.utab.samplekotlinapp.view.loginFragment.LoginVm" />
        <variable
            name="fragment"
            type="com.utab.samplekotlinapp.view.loginFragment.LoginFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".view.loginFragment.LoginFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/user_name"
            android:afterTextChanged="@{viewModel::afterTextChangedUserName}"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/password"
            android:afterTextChanged="@{viewModel::afterTextChangedPass}"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/login"
                android:onClick="@{()->fragment.onLoginBtnClickListener()}"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:onClick="@{()->fragment.onSignupBtnClickListener()}"
                />
        </LinearLayout>

    </LinearLayout>
</layout>